Remoção descrição serviços

--- a/index.html
+++ b/index.html
@@ -71,7 +71,6 @@
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title text-center wow fadeInDown">Serviços</h2>
-                <p class="text-center wow fadeInDown">Soluções em TI de acordo com às suas necessidades, para o ambiente doméstico e corporativo<br> </p>
             </div>
 
             <div class="row">
@@ -144,7 +143,7 @@
                             </div>
                             <div class="media-body">
                                 <h4 class="media-heading">Consultoria</h4>
-                                <p>São analisadas </p>
+                                <p>São analisadas todas as suas necessidades e direcionadas para as melhores soluções.</p>
                             </div>
                         </div>
                     </div>
